Page gestion des villes

--- a/templates/ville/gestion-villes.html.twig
+++ b/templates/ville/gestion-villes.html.twig
@@ -20,10 +20,23 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th scope="col">Campus</th>
+                    <th scope="col">Villes</th>
+                    <th scope="col">Code postal</th>
                     <th scope="col">Actions</th>
                 </tr>
                 </thead>
+                {% for ville in listeVilles %}
+                    <tr>
+                        <td>{{ ville.nom }}</td>
+                        <td>{{ ville.codePostal }}</td>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+                <tr>
+                    <td><input name="addVille" id="addVille" placeholder="Ajouter une ville"></td>
+                    <td></td>
+                    <td href="#">Ajouter</td>
+                </tr>
             </table>
         </div>
     </div>
