--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -16,17 +16,14 @@
         <div class="col-sm-6 col-xs-12">
             {{ form_row(findMesSortiesForm.dateFin) }}
         </div>
+        <div class="col-sm-6 col-xs-12">
+            {{ form_row(findMesSortiesForm.mesInscriptions) }}
+        </div>
         <div class="col-12">
             <h5>Sorties : </h5>
         </div>
         <div class="col-sm-12 col-xs-12" style="padding-left: 30px">
             {{ form_row(findMesSortiesForm.mesSorties) }}
-        </div>
-        <div class="col-sm-12 col-xs-12" style="padding-left: 30px">
-            {{ form_row(findMesSortiesForm.mesInscriptions) }}
-        </div>
-        <div class="col-sm-12 col-xs-12" style="padding-left: 30px">
-            {{ form_row(findMesSortiesForm.pasEncoreInscrit) }}
         </div>
         <div class="col-sm-12 col-xs-12" style="padding-left: 30px">
             {{ form_row(findMesSortiesForm.sortiesPassees) }}
@@ -89,7 +86,7 @@
                             {% if inscrit == true %}
                                 {# Si l'utilisateur est l'organisateur de la sortie #}
                                 {% if sortie.organisateur.pseudo == app.user.pseudo %}
-                                    Modif' de l'affichage suivant l'état de la sortie
+                                    {# Modif' de l'affichage suivant l'état de la sortie #}
                                     {% if sortie.etat.libelle == 'créée' %}
                                         <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
                                             Modifier</a> - <a>Publier</a>
