--- a/templates/ville/gestion-villes.html.twig
+++ b/templates/ville/gestion-villes.html.twig
@@ -32,10 +32,13 @@
                         <td></td>
                     </tr>
                 {% endfor %}
+
                 <tr>
-                    <td><input name="addVille" id="addVille" placeholder="Ajouter une ville"></td>
-                    <td></td>
-                    <td href="#">Ajouter</td>
+                    {{ form_start(addVille) }}
+                    <td>{{ form_row(addVille.nom) }}</td>
+                    <td>{{ form_row(addVille.codePostal) }}</td>
+                    <td>{{ form_row(addVille.Ajouter) }}</td>
+                    {{ form_end(addVille) }}
                 </tr>
             </table>
         </div>
