--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -35,9 +35,148 @@
     </div>
     {{ form_end(findMesSortiesForm) }}
     <br>
-    {# Affichage du tableau si je suis inscrit #}
+
+    {# Affichage du tableau #}
     {% if sorties | length > 0 %}
-        {% if estInscrit == true %}
+        {# Toutes les sorties #}
+        {% if estInscrit is null %}
+            <div class="table-responsive pre-scrollable table-bordered table-info">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Nom de la sortie</th>
+                        <th scope="col">Date de la sortie</th>
+                        <th scope="col">Clôture</th>
+                        <th scope="col">Inscrits/<br>places</th>
+                        <th scope="col">Etat</th>
+                        <th scope="col">Inscrit</th>
+                        <th scope="col">Organisateur</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                    </thead>
+                    {% for sortie in sorties %}
+                        <tr>
+                            <td>{{ sortie.nom }}</td>
+                            <td>{{ sortie.dateHeureDebut | date('d/m/y') }}</td>
+                            <td>{{ sortie.dateLimiteInscription | date('d/m/y') }}</td>
+                            <td class="text-center">{{ sortie.inscriptions | length }} /
+                                {{ sortie.nbInscriptionMax }}
+                            </td>
+                            <td>{{ sortie.etat.libelle }}</td>
+                            <td class="text-center">
+                                {% for numSortieInscrit in numeroSortieInscrit %}
+                                    {% if numSortieInscrit == sortie.id %}
+                                        X
+                                    {% endif %}
+                                {% endfor %}
+                            </td>
+                            <td>
+                                <a href="{{ path('profile', {pseudo: sortie.organisateur.pseudo}) }}">{{ sortie.organisateur.prenom }}
+                                    {{ sortie.organisateur.nom | slice(0,1) }}.</a>
+                            </td>
+                            {# Affichage dans la colonne 'Actions' #}
+                            <td>
+                                {% set inscrit = false %}
+                                {% for numSortieInscrit in numeroSortieInscrit %}
+                                    {% if numSortieInscrit == sortie.id %}
+                                        {% set inscrit = true %}
+                                    {% endif %}
+                                {% endfor %}
+                                {# Si l'utilisateur est inscrit #}
+                                {% if inscrit == true %}
+                                    {# Si l'utilisateur est l'organisateur de la sortie #}
+                                    {% if sortie.organisateur.pseudo == app.user.pseudo %}
+                                        {# Modif' de l'affichage suivant l'état de la sortie #}
+                                        {% if sortie.etat.libelle == 'créée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Modifier</a> - <a>Publier</a>
+                                        {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'passée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'annulée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% else %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher/Se désister</a> -
+                                            <a href="{{ path('sortie_delete',{id: sortie.id}) }}">
+                                                Annuler</a>
+                                        {% endif %}
+                                    {% else %}
+                                        {# Si l'utilisateur n'est pas l'organisateur de la sortie #}
+                                        {% if sortie.etat.libelle == 'créée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'passée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'annulée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% else %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher/Se désister</a>
+                                        {% endif %}
+                                    {% endif %}
+                                {% else %}
+                                    {# Si l'utilisateur n'est pas inscrit #}
+                                    {# Si l'utilisateur est l'organisateur de la sortie #}
+                                    {% if sortie.organisateur.pseudo == app.user.pseudo %}
+                                        {# Modif' de l'affichage suivant l'état de la sortie #}
+                                        {% if sortie.etat.libelle == 'créée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Modifier</a> - Publier
+                                        {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'passée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'annulée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% else %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher/S'inscrire</a> -
+                                            <a href="{{ path('sortie_delete',{id: sortie.id}) }}">
+                                                Annuler</a>
+                                        {% endif %}
+                                    {% else %}
+                                        {# Si l'utilisateur n'est pas l'organisateur de la sortie #}
+                                        {% if sortie.etat.libelle == 'créée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'activité en cours' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'passée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'annulée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% elseif sortie.etat.libelle == 'clôturée' %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher</a>
+                                        {% else %}
+                                            <a href="{{ path('sortie_detail', {id: sortie.id}) }}">
+                                                Afficher/S'inscrire</a>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+            {# Affichage du tableau si je suis inscrit #}
+        {% elseif estInscrit == true %}
             <div class="table-responsive pre-scrollable table-bordered table-info">
                 <table class="table table-striped">
                     <thead>
@@ -312,7 +451,6 @@
                                         {% endif %}
                                     </td>
                                 </tr>
-
                             {% endif %}
                         {% endfor %}
                     {% endfor %}
