display bouton create sortie quand téléphone

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -30,7 +30,7 @@
         </div>
         <div class="col-12 text-center">
             <input class="btn btn-primary" type="submit" value="Rechercher">
-            <a class="btn btn-primary" href="{{ path('sortie') }}">Créer une sortie</a>
+            <a class="btn btn-primary d-none d-md-inline-block" href="{{ path('sortie') }}">Créer une sortie</a>
         </div>
     </div>
     {{ form_end(findMesSortiesForm) }}
