--- a/templates/User/monProfil.html.twig
+++ b/templates/User/monProfil.html.twig
@@ -1,85 +1,80 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <div class="col-12 row">
-        <div class="col-2 align-self-center">
+    <div class="col-12 form-row">
+
+        <h1 class="col-sm-12 text-center" style="padding-bottom: 20px">Mon profil</h1>
+
+        <div class="col-4 align-baseline">
             <img src="{{ asset('uploads/photo_profil/' ~ user.getUrlPhoto()) }}" width="150">
-        </div>
-        <div class="col-10">
-            {{ form_start(userForm) }}
-
-            <div>
-                <label>{{ form_label(userForm.pseudo) }} : </label>
-                {{ form_widget(userForm.pseudo) }}
-                {{ form_errors(userForm.pseudo) }}
-            </div>
-
-            <div>
-                <label>{{ form_label(userForm.prenom) }} : </label>
-                {{ form_widget(userForm.prenom) }}
-                {{ form_errors(userForm.prenom) }}
-            </div>
-
-            <div>
-                <label>{{ form_label(userForm.nom) }} : </label>
-                {{ form_widget(userForm.nom) }}
-                {{ form_errors(userForm.nom) }}
-            </div>
-
-            <div>
-                <label>{{ form_label(userForm.telephone) }} : </label>
-                {{ form_widget(userForm.telephone) }}
-                {{ form_errors(userForm.telephone) }}
-            </div>
-
-            <div>
-                <label>{{ form_label(userForm.mail) }} : </label>
-                {{ form_widget(userForm.mail) }}
-                {{ form_errors(userForm.mail) }}
-            </div>
-
-
-
-            <div>
-                {{ form_widget(userForm.password) }}
-                {{ form_errors(userForm.password) }}
-            </div>
-
-            <div>
-                <label>{{ form_label(userForm.campus) }} : </label>
-                {{ form_widget(userForm.campus) }}
-                {{ form_errors(userForm.campus) }}
-            </div>
-
-            <label>Ma photo : </label>
-            <div class="btn btn-outline-primary">
-                {{ form_label(userForm.urlPhoto) }}
-                {{ form_widget(userForm.urlPhoto) }}
-                {{ form_errors(userForm.urlPhoto) }}
-            </div>
             <br>
-
-            {{ form_row(userForm._token) }}
-            <button class="btn btn-primary" type="submit">Modifier</button><a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
-            {{ form_end(userForm, {'render_rest': false}) }}
         </div>
+
+            {{ form_start(userForm) }}
+        <div>
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.pseudo) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.pseudo) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.prenom) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.prenom) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.nom) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.nom) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.telephone) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.telephone) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.mail) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.mail) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">Nouveau mot de passe : </label>
+                <div class="col-sm-8">{{ form_row(userForm.password) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">{{ form_label(userForm.campus) }} : </label>
+                <div class="col-sm-8">{{ form_widget(userForm.campus) }}</div>
+            </div>
+
+            <div class="form-row">
+                <label class="col-sm-4">Ma photo : </label>
+                <div class="btn btn-outline-primary col-sm-8" style="padding-top: 3px;padding-bottom: 2px">
+                    {{ form_label(userForm.urlPhoto) }}
+                    {{ form_widget(userForm.urlPhoto) }}
+                    {{ form_errors(userForm.urlPhoto) }}
+                </div>
+            </div>
+
+        </div>
+        <br>
+            {{ form_row(userForm._token) }}
+    </div>
 
         <div class="text-center">
+            <button class="btn btn-primary" type="submit">Modifier</button><a class="btn btn-dark" href="{{ app.request.headers.get('referer') }}">Retour</a>
+
             {% if app.user.administrateur == 1 %}
                 <form action="{{ path('supprimer', {id: user.id}) }}" onsubmit="return validate()">
-
                     <input id="status" hidden value="nope">
-
                     <button class="btn btn-danger" type="submit">Supprimer utilisateur</button>
-
                 </form>
             {% endif %}
         </div>
-    </div>
+    {{ form_end(userForm, {'render_rest': false}) }}
 {% endblock %}
 
 {% block javascripts %}
-
 <script>
     function validate() {
         if (document.getElementById("status").value) {
@@ -90,5 +85,4 @@
         }
     }
 </script>
-
 {% endblock %}
