--- a/templates/ville/gestion-villes.html.twig
+++ b/templates/ville/gestion-villes.html.twig
@@ -57,6 +57,7 @@
 
 
 {% block javascripts %}
+    {{ parent() }}
     <script>
         function validate() {
             if (document.getElementById("status").value) {
