--- a/templates/User/profil.html.twig
+++ b/templates/User/profil.html.twig
@@ -43,7 +43,7 @@
 
 
 {% block javascripts %}
-
+    {{ parent() }}
     <script>
         function validate() {
             if (document.getElementById("status").value) {
