--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -14,16 +14,16 @@
         <div class="table-responsive pre-scrollable table-bordered table-info">
             <table class="table table-striped">
                 <thead>
-                    <tr>
-                        <th scope="col">Pseudo</th>
-                        <th scope="col">Nom</th>
-                        <th scope="col">Prénom</th>
-                        <th scope="col">Téléphone</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Campus</th>
-                        <th scope="col">Actif</th>
-                        <th scope="col">Administrateur</th>
-                    </tr>
+                <tr>
+                    <th scope="col">Pseudo</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Prénom</th>
+                    <th scope="col">Téléphone</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Campus</th>
+                    <th scope="col">Actif</th>
+                    <th scope="col">Administrateur</th>
+                </tr>
                 </thead>
                 {% for user in users %}
                     <tr>
@@ -39,7 +39,8 @@
                         <td>{{ user.campus.nom }}</td>
                         {% if user.actif == 0 %}
                             <td>
-                                <form action="{{ path('activer', {id: user.id}) }}" onsubmit="return validerteActivation()">
+                                <form action="{{ path('activer', {id: user.id}) }}"
+                                      onsubmit="return validerteActivation()">
 
                                     <input id="status" hidden value="nope">
 
@@ -49,7 +50,8 @@
                             </td>
                         {% else %}
                             <td>
-                                <form action="{{ path('desactiver', {id: user.id}) }}" onsubmit="return validaterDesactivation()">
+                                <form action="{{ path('desactiver', {id: user.id}) }}"
+                                      onsubmit="return validaterDesactivation()">
 
                                     <input id="status" hidden value="nope">
 
@@ -76,6 +78,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
 
     <script>
         function validerteActivation() {
